Bug 372611 - plasma-discover 5.8.90 crashes when using the text filter box
Summary: plasma-discover 5.8.90 crashes when using the text filter box
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: discover (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Aleix Pol
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-11-18 03:45 UTC by Darin Miller
Modified: 2016-11-20 13:43 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Darin Miller 2016-11-18 03:45:37 UTC
1. Launch plasma-discover 5.8.90 (Neon unstable)
2. Type something in the search box, i.e. gimp
3. Delete text and type another search.

Crash usually happens by the 2nd or 3rd search.

Autobug report says not enough info to file a report, so report filed manually.  However, plasma-discover produced a core dump which I can attach if needed. 

/var/lib/systemd/coredump: 

-rw-r-----+ 1 root root 22504776 Nov 16 21:11 core.plasma-discover.1000.0677b29c8fff42d3bc0469c55d37556c.14239.1479355810000000000000.xz
Comment 1 Aleix Pol 2016-11-20 13:43:45 UTC
Git commit 84124e8cad48a2e745cdc191bca7d42de7dac8d2 by Aleix Pol.
Committed on 20/11/2016 at 13:30.
Pushed by apol into branch 'master'.

Better convert between a packagename into its resource

M  +3    -4    libdiscover/backends/PackageKitBackend/PackageKitBackend.cpp

http://commits.kde.org/discover/84124e8cad48a2e745cdc191bca7d42de7dac8d2