Better convert between a packagename into its resource

BUG: 372611